--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "pretty": "prettier --write --plugin-search-dir=. ./**/*.{html,svelte}"
+    "pretty": "prettier --write --plugin-search-dir=. ./**/*.{html,svelte,js}"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
