--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
-    "gsap": "^3.11.3"
+    "gsap": "^3.11.3",
+    "sparticles": "^1.3.1",
+    "svelte-gestures": "^1.4.1"
   }
 }
